Adding commands, handlers, queries, repositories, fixture bundle
