# src/Cookway/Infrastructure/Recipe/DoctrineIngredientsRepository.php
@@ -1,0 +1,38 @@
+<?php
+/**
+ * Created By Magdalena Kuncicka
+ * Copyright (c) 2018
+ *
+ * All Rights Reserved
+ */
+
+namespace Cookway\Infrastructure\Recipe;
+
+
+use Cookway\Domain\Recipe\Ingredient;
+use Doctrine\Common\Persistence\ObjectRepository;
+use Doctrine\ORM\EntityManagerInterface;
+
+class DoctrineIngredientsRepository
+{
+    /**
+     * @var EntityManagerInterface
+     */
+    private $entityManager;
+
+    /**
+     * @var ObjectRepository
+     */
+    private $repository;
+
+    public function __construct(EntityManagerInterface $entityManager)
+    {
+        $this->entityManager = $entityManager;
+        $this->repository = $entityManager->getRepository(Ingredient::class);
+    }
+
+    public function getById($id)
+    {
+        return $this->repository->find($id);
+    }
+}
